MAJ Acompte final

--- a/public/index.html
+++ b/public/index.html
@@ -355,7 +355,7 @@
 								</li>
 
 								<li class="review-item">
-									<a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
+									<a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html#tab-reviews" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
 										<img src="images/logos/BOOKING.png" alt="Logo Booking" class="logo-circle" />
 										<div class="review-text">
 											<span>Booking</span>
@@ -367,7 +367,7 @@
 													<i class="fas fa-star color1"></i>
 													<i class="fas fa-star-half-alt color1"></i>
 												</span>
-												<span class="score">(9,6/10) – 37 avis</span>
+												<span class="score">(9,5/10) – 44 avis</span>
 											</div>
 										</div>
 									</a>
