--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -960,7 +960,7 @@
 
           console.log('Loading reservation data for token:', token)
           const response = await fetch(
-            `/api/getReservation?token=${encodeURIComponent(token)}&stage=deposit`
+            `/api/getReservation?token=${encodeURIComponent(token)}`
           )
           const result = await response.json()
 
