--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -11,10 +11,18 @@
     <script src="https://js.stripe.com/v3/"></script>
     <style>
       .form-section { background: rgba(255,255,255,0.1); border-radius: 20px; padding: 20px; box-shadow: 0 12px 40px rgba(0,0,0,0.15); backdrop-filter: blur(20px); border: 1px solid rgba(255,255,255,0.3); }
-      .summary { background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.25); border-radius: 12px; padding: 16px; margin-top: 16px; color: white; }
+      .reservation-details { background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.25); border-radius: 12px; padding: 16px; margin-top: 16px; color: white; }
+      .detail-item { display:flex; justify-content: space-between; padding: 10px 0; border-bottom: 1px solid rgba(255,255,255,0.25); font-size: 0.95rem; }
+      .detail-item:last-child { border-bottom: none; margin-top: 10px; padding-top: 10px; }
+      .payment-card { background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.25); border-radius: 12px; padding: 16px; margin-top: 16px; color: white; }
+      .payment-row { display:flex; justify-content: space-between; padding: 8px 0; }
+      .payment-row.deposit { color:#3b82f6; font-weight:600; }
+      .progress-bar { width:100%; height:8px; background: rgba(255,255,255,0.25); border-radius:4px; overflow:hidden; margin: 8px 0 12px; }
+      .progress-fill { height:100%; width:0%; background:#3b82f6; transition: width .3s ease; }
       .btn-submit { background: linear-gradient(135deg, #3b82f6, #2563eb); color: white; padding: 14px 24px; border: none; border-radius: 12px; font-weight: 600; width: 100%; display: flex; align-items: center; justify-content: center; min-height: 50px; box-shadow: 0 6px 20px rgba(59,130,246,0.3); }
       .btn-submit:disabled { background: #9ca3af; }
       #card-errors { color: #ef4444; margin-top: 10px; font-size: 0.9rem; }
+      .payment-disclaimer { text-align:center; color: rgba(255,255,255,0.9); font-size: .85rem; margin-top: 10px; }
     </style>
   </head>
   <body class="is-preload">
@@ -34,13 +42,25 @@
             <h3 class="major">💳 Paiement du solde</h3>
             <div id="messages"></div>
             <div class="form-section">
-              <div class="summary" id="recap">Chargement en cours…</div>
-              <div style="margin-top:16px">
-                <label for="card-element" style="color:white; font-weight:600;">Carte de paiement</label>
-                <div id="card-element" style="background: rgba(255,255,255,0.9); border-radius: 10px; padding: 12px;"></div>
-                <div id="card-errors" role="alert"></div>
+              <!-- Détails de la réservation -->
+              <div class="reservation-details" id="reservation-details">Chargement en cours…</div>
+
+              <!-- Récapitulatif du paiement -->
+              <div class="payment-card">
+                <h4 style="margin:0 0 10px 0;">Récapitulatif du paiement</h4>
+                <div class="payment-row"><span>Total</span><span id="total-amount">—</span></div>
+                <div class="payment-row deposit"><span>Acompte déjà versé (<span id="deposit-percent">0%</span>)</span><span id="deposit-amount">—</span></div>
+                <div class="progress-bar"><div class="progress-fill" id="progress-fill"></div></div>
+                <div class="payment-row" style="border-top:1px solid rgba(255,255,255,0.25); padding-top:12px; margin-top:4px;"><span>Solde restant</span><span id="remaining-amount">—</span></div>
+
+                <div style="margin-top:16px">
+                  <label for="card-element" style="color:white; font-weight:600;">Carte de paiement</label>
+                  <div id="card-element" style="background: rgba(255,255,255,0.9); border-radius: 10px; padding: 12px;"></div>
+                  <div id="card-errors" role="alert"></div>
+                </div>
+                <button id="pay-btn" class="btn-submit" style="margin-top:16px"><span id="btn-text">Payer le solde</span></button>
+                <p class="payment-disclaimer">Paiement sécurisé via Stripe. Aucune donnée bancaire n'est stockée par Calypso Bay.</p>
               </div>
-              <button id="pay-btn" class="btn-submit" style="margin-top:16px"><span id="btn-text">Payer le solde</span></button>
             </div>
           </div>
           <div class="image filtered tinted" data-position="center"><img src="images/pic02.jpg" alt="" /></div>
@@ -63,7 +83,7 @@
 
       const params = new URLSearchParams(window.location.search)
       const token = params.get('token')
-      const recap = document.getElementById('recap')
+      const detailsBox = document.getElementById('reservation-details')
       const btn = document.getElementById('pay-btn')
       const btnText = document.getElementById('btn-text')
 
@@ -72,18 +92,47 @@
         try {
           const res = await fetch(`/api/getReservation?token=${encodeURIComponent(token)}`)
           const json = await res.json()
-          if (json.status !== 'success') { recap.textContent = json.message || 'Réservation introuvable'; btn.disabled = true; return }
+          if (json.status !== 'success') { detailsBox.textContent = json.message || 'Réservation introuvable'; btn.disabled = true; return }
           const d = json.data
           const total = Number(d.priceTotal || 0)
           const deposit = Number(d.depositAmount || 0)
           const balance = Math.max(0, total - deposit)
-          recap.innerHTML = `
-            <div><strong>Nom:</strong> ${d.name || ''}</div>
-            <div><strong>Dates:</strong> ${d.startDate} → ${d.endDate} (${d.nbNights || 0} nuits)</div>
-            <div><strong>Total:</strong> ${total.toLocaleString('fr-FR',{minimumFractionDigits:2,maximumFractionDigits:2})} €</div>
-            <div><strong>Acompte:</strong> ${deposit.toLocaleString('fr-FR',{minimumFractionDigits:2,maximumFractionDigits:2})} €</div>
-            <div><strong>Solde à payer:</strong> <span style="font-weight:700;">${balance.toLocaleString('fr-FR',{minimumFractionDigits:2,maximumFractionDigits:2})} €</span></div>
-          `
+          // Détails formatés comme demandé
+          const formatMoney = (v) => Number(v || 0).toLocaleString('fr-FR', { minimumFractionDigits: 1, maximumFractionDigits: 1 })
+          const formatMoney2 = (v) => Number(v || 0).toLocaleString('fr-FR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })
+          const ages = (d.childrenAges && d.childrenAges.length)
+            ? d.childrenAges.join(', ')
+            : ''
+          const dates = new Date(d.startDate)
+          const datee = new Date(d.endDate)
+          const fmt = (dt) => dt.toLocaleDateString('fr-FR', { day:'2-digit', month:'long', year:'numeric' })
+          const lines = []
+          lines.push(`<div class="detail-item"><strong>Dates :</strong> <span>${fmt(dates)} au ${fmt(datee)} (${d.nbNights} nuits)</span></div>`)
+          lines.push(`<div class="detail-item"><strong>Voyageurs :</strong> <span>${d.nbAdults} adulte${d.nbAdults>1?'s':''}${d.nbChilds>0?', '+d.nbChilds+' enfant'+(d.nbChilds>1?'s':''):''}</span></div>`)
+          if (d.nbChilds > 0) {
+            lines.push(`<div class="detail-item"><strong>Âges des enfants :</strong> <span>${ages}</span></div>`)
+          }
+          lines.push('<div class="detail-item" style="border-bottom:none; display:block; padding-bottom:0;">\
+            <div><strong>Détail du prix :</strong></div>\
+            <div style="padding-top:8px">• Total des nuits ('+d.nbNights+`) : ${formatMoney(d.priceNights)} €</div>\
+            <div>• Frais de ménage : ${formatMoney(d.priceClean)} €</div>\
+            <div>• Taxes (${d.nbAdults} adulte${d.nbAdults>1?'s':''}) : ${formatMoney(d.priceTax)} €</div>\
+            <div>• <strong>Total : ${formatMoney(d.priceTotal)} €</strong></div>\
+          </div>`)
+          lines.push('<div class="detail-item" style="border-bottom:none; display:block; padding-bottom:0;">\
+            <div><strong>Adresse de facturation :</strong></div>\
+            <div style="padding-top:8px">'+(d.address||'')+`</div>\
+            <div>${(d.postal||'')} ${d.city||''}</div>\
+            <div>${d.country||''}</div>\
+          </div>`)
+          detailsBox.innerHTML = lines.join('')
+
+          // Récap paiement
+          document.getElementById('total-amount').textContent = `${formatMoney2(total)} €`
+          document.getElementById('deposit-amount').textContent = `${formatMoney2(deposit)} €`
+          document.getElementById('remaining-amount').textContent = `${formatMoney2(balance)} €`
+          document.getElementById('deposit-percent').textContent = total>0 ? `${Math.round((deposit/total)*100)}%` : '0%'
+          document.getElementById('progress-fill').style.width = total>0 ? `${Math.min(100,(deposit/total)*100)}%` : '0%'
           btnText.textContent = `Payer le solde – ${balance.toLocaleString('fr-FR',{minimumFractionDigits:2,maximumFractionDigits:2})} €`
         } catch (e) { recap.textContent = 'Erreur de chargement' }
       }
