--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -110,7 +110,7 @@
           // Détails formatés comme demandé
           const formatMoney = (v) => Number(v || 0).toLocaleString('fr-FR', { minimumFractionDigits: 1, maximumFractionDigits: 1 })
           const formatMoney2 = (v) => Number(v || 0).toLocaleString('fr-FR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })
-          const ages = (d.childrenAges && d.childrenAges.length)
+          const ages = Array.isArray(d.childrenAges) && d.childrenAges.length
             ? d.childrenAges.join(', ')
             : ''
           const dates = new Date(d.startDate)
@@ -119,7 +119,7 @@
           const lines = []
           lines.push(`<div class="detail-item"><strong>Dates :</strong> <span>${fmt(dates)} au ${fmt(datee)} (${d.nbNights} nuits)</span></div>`)
           lines.push(`<div class="detail-item"><strong>Voyageurs :</strong> <span>${d.nbAdults} adulte${d.nbAdults>1?'s':''}${d.nbChilds>0?', '+d.nbChilds+' enfant'+(d.nbChilds>1?'s':''):''}</span></div>`)
-          if (d.nbChilds > 0) {
+          if (d.nbChilds > 0 && ages) {
             lines.push(`<div class="detail-item"><strong>Âges des enfants :</strong> <span>${ages}</span></div>`)
           }
           lines.push('<div class="detail-item" style="border-bottom:none; display:block; padding-bottom:0;">\
@@ -131,10 +131,10 @@
           </div>`)
           lines.push('<div class="detail-item" style="border-bottom:none; display:block; padding-bottom:0;">\
             <div><strong>Adresse de facturation :</strong></div>\
-            <div style="padding-top:8px">'+(d.address||'')+`</div>\
-            <div>${(d.postal||'')} ${d.city||''}</div>\
-            <div>${d.country||''}</div>\
-          </div>`)
+            <div style="padding-top:8px">'+(d.address||'')+'</div>\
+            <div>'+((d.postal||''))+' '+(d.city||'')+'</div>\
+            <div>'+(d.country||'')+'</div>\
+          </div>')
           detailsBox.innerHTML = lines.join('')
 
           // Récap paiement
