--- a/public/admin.html
+++ b/public/admin.html
@@ -13,37 +13,24 @@
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
     <style>
-      body {
-        color: white;
-      }
-      .panel {
-        background: rgba(255, 255, 255, 0.06);
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        border-radius: 12px;
-        padding: 16px;
-      }
-      table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-      th,
-      td {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-        padding: 8px;
-        font-size: 0.9rem;
-      }
-      .actions button {
-        margin-right: 6px;
-      }
-      .tag {
-        background: rgba(255, 255, 255, 0.15);
-        border-radius: 8px;
-        padding: 2px 8px;
-        font-size: 0.8rem;
-      }
-      .login {
-        margin-bottom: 12px;
-      }
+      body { color: white; }
+      .panel { background: rgba(255,255,255,0.06); border: 1px solid rgba(255,255,255,0.2); border-radius: 12px; padding: 16px; }
+      .login { display:flex; gap:12px; align-items:center; margin-bottom:12px; }
+      .login input { padding:8px 10px; border-radius:8px; border:1px solid rgba(255,255,255,0.3); background: rgba(255,255,255,0.9); color:#111; }
+      .login button { padding:8px 12px; border-radius:8px; border:none; background:#5d3fd3; color:#fff; font-weight:600; }
+      .toolbar { display:flex; gap:16px; align-items:center; justify-content:space-between; margin-bottom:10px; }
+      .toolbar .search { display:flex; gap:8px; align-items:center; }
+      .search input { padding:8px 10px; border-radius:8px; border:1px solid rgba(255,255,255,0.3); background: rgba(255,255,255,0.9); color:#111; min-width:260px; }
+      .table-wrap { overflow:auto; max-height: 60vh; border-radius:10px; }
+      table { width: 100%; border-collapse: collapse; }
+      thead th { position: sticky; top:0; background: rgba(0,0,0,0.35); backdrop-filter: blur(6px); }
+      th, td { border-bottom: 1px solid rgba(255,255,255,0.12); padding: 10px 8px; font-size: 0.95rem; white-space: nowrap; }
+      tbody tr:hover { background: rgba(255,255,255,0.06); }
+      .tag { padding: 4px 10px; border-radius: 999px; font-size: 0.8rem; font-weight:600; }
+      .tag.accepted { background: rgba(59,130,246,.2); color:#dbeafe; }
+      .tag.depositPay { background: rgba(16,185,129,.25); color:#dcfce7; }
+      .tag.balancePay { background: rgba(99,102,241,.25); color:#e0e7ff; }
+      .empty { color: rgba(255,255,255,0.8); padding: 20px; text-align:center; }
     </style>
   </head>
   <body class="is-preload">
@@ -51,34 +38,18 @@
       <div id="wrapper" class="inner">
         <h2 class="major">Tableau de bord</h2>
         <div class="panel">
-          <div class="login">
-            Clé d'accès:
-            <input
-              id="key"
-              type="password"
-              placeholder="ADMIN_KEY"
-              style="
-                padding: 6px;
-                border-radius: 8px;
-                border: 1px solid rgba(255, 255, 255, 0.3);
-                width: 200px;
-              "
-            />
-            <button id="loginBtn">Se connecter</button>
+          <div class="toolbar">
+            <div class="login">
+              <span>Clé d'accès:</span>
+              <input id="key" type="password" placeholder="ADMIN_KEY" />
+              <button id="loginBtn">Se connecter</button>
+            </div>
+            <div class="search">
+              <span>Filtre:</span>
+              <input id="query" placeholder="Rechercher par nom/email/token" />
+            </div>
           </div>
-          <div style="margin-bottom: 10px">
-            Filtre:
-            <input
-              id="query"
-              placeholder="Rechercher par nom/email/token"
-              style="
-                padding: 6px;
-                border-radius: 8px;
-                border: 1px solid rgba(255, 255, 255, 0.3);
-                width: 260px;
-              "
-            />
-          </div>
+          <div class="table-wrap">
           <table id="table">
             <thead>
               <tr>
@@ -93,6 +64,8 @@
             </thead>
             <tbody></tbody>
           </table>
+          <div id="empty" class="empty" style="display:none;">Aucune réservation trouvée.</div>
+          </div>
         </div>
       </div>
     </div>
@@ -111,6 +84,12 @@
         if (j.status !== 'success') throw new Error(j.message || 'Erreur')
         return j.data || []
       }
+      function formatDate(d) {
+        if (!d) return ''
+        const dt = new Date(d)
+        if (isNaN(dt.getTime())) return d
+        return dt.toLocaleDateString('fr-FR')
+      }
       function render(rows) {
         const tb = document.querySelector('#table tbody')
         tb.innerHTML = rows
@@ -118,13 +97,13 @@
             (r) => `<tr>
           <td>${r.name || ''}</td>
           <td>${r.email || ''}</td>
-          <td>${r.startDate || ''} → ${r.endDate || ''}</td>
-          <td><span class="tag">${r.status || ''}</span></td>
+          <td>${formatDate(r.startDate)} → ${formatDate(r.endDate)}</td>
+          <td><span class="tag ${r.status||''}">${r.status || ''}</span></td>
           <td>${(r.depositAmount || 0).toLocaleString('fr-FR', {
             minimumFractionDigits: 2,
             maximumFractionDigits: 2
           })} €</td>
-          <td>${(r.balanceAmount || 0).toLocaleString('fr-FR', {
+          <td>${(r.balanceAmount || Math.max(0,(r.priceTotal||0)-(r.depositAmount||0))).toLocaleString('fr-FR', {
             minimumFractionDigits: 2,
             maximumFractionDigits: 2
           })} €</td>
@@ -135,7 +114,14 @@
         </tr>`
           )
           .join('')
+        document.getElementById('empty').style.display = rows.length ? 'none' : 'block'
       }
+      // Filtre live après login
+      document.getElementById('query').addEventListener('input', async () => {
+        const key = document.getElementById('key').value
+        if (!key) return
+        try { const rows = await fetchReservations(key, document.getElementById('query').value); render(rows) } catch(e){}
+      })
       document
         .getElementById('loginBtn')
         .addEventListener('click', async () => {
@@ -155,17 +141,17 @@
       })
       document.getElementById('query').addEventListener('keydown', (ev) => {
         if (ev.key === 'Enter') document.getElementById('loginBtn').click()
-      })
-
-      // Auto-login si clé fournie dans l'URL (?key=...)
-      (function () {
-        const params = new URLSearchParams(window.location.search)
-        const initKey = params.get('key')
-        if (initKey) {
-          document.getElementById('key').value = initKey
-          document.getElementById('loginBtn').click()
+      })(
+        // Auto-login si clé fournie dans l'URL (?key=...)
+        function () {
+          const params = new URLSearchParams(window.location.search)
+          const initKey = params.get('key')
+          if (initKey) {
+            document.getElementById('key').value = initKey
+            document.getElementById('loginBtn').click()
+          }
         }
-      })()
+      )()
     </script>
   </body>
 </html>
